# BackendV1

./: .env  .gitignore  AI_ANALYSIS_IMPLEMENTATION.md  API_GET_FILES_BY_PROJECT.md  GITHUB_SETUP.md  README.md  alembic.ini  note.txt  pyproject.toml  requirements.txt  team_update_whatsapp.md  test_ai_analysis.py  test_connection.ps1  test_frontend.html  test_get_files_by_project.py
Learning/: Step1.txt  application_documentation.md  bug_fix_report.md  new_features_update.md  step2.txt
alembic/: env.py
alembic/versions/: 027856de8cb8_add_projects_files_workflows.py  3a704896a316_add_code_review_custom_rules_batch_.py  6f129d37bc2e_add_file_hash_to_analysishistory.py  76f0505b0254_add_result_and_file_path_to_analysis_.py  78ef792d1592_complete_core_schema.py  87c87c6b196a_add_ai_calls_count_and_api_calls_count_.py  b51bd781fade_add_ai_fields_to_workflows_and_reviews.py  c13bf7677ff2_add_missing_tables_activity_mapping_.py  d47ce51b91cf_add_role_to_users.py  e13de6caf70f_add_role_to_users.py  eb92cc77172e_sync_all_models.py  f772f0754df7_add_code_review_custom_rules_batch_.py
app/: main.py
app/core/: admin_auth.py  api_key.py  api_key_auth.py  auth.py  config.py  core_context.py  database.py  deps.py  jwt.py  quota_check.py  rate_limiter.py  redis_client.py  security.py  (+2 more)
docs/: AI_ANALYSIS_QUICK_REF.md  AI_CODE_REVIEW_ANALYSIS.md
update/: custom_rules_api.md  gemini_integration_plan.md
uploads/: 4aa31f61-d063-42ed-b615-217e7e6158c8_uc9_RPAChallenge_form.xaml  5eb280b2-de77-47a9-89a3-e8ec9f85731c_Main.xaml  7cf8bcb5-ab93-4af0-9895-48cb6da616fd_Mail.xaml
(+89 files in other folders)
